2023-10-07  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Bottom transparent shadow changes were registered in wrong row

2023-10-03  Markus Gans  <guru.mail@muenster.de>
	* Eliminate undefined behavior on exit

2023-09-17  Markus Gans  <guru.mail@muenster.de>
	* Better direct access to FCharAttribute type

2023-06-04  Markus Gans  <guru.mail@muenster.de>
	* Added support for a tiltable scroll wheel. This allows you to scroll 
	  the context of widgets left and right in an xterm

2023-05-31  Markus Gans  <guru.mail@muenster.de>
	* Fix setFormatedNumber() in FString for separator > 127 
	  (e.g. non-breaking space)

2023-05-18  Markus Gans  <guru.mail@muenster.de>
	* Version 0.9.0

2023-04-15  Markus Gans  <guru.mail@muenster.de>
	* Terminal focus-in and focus-out events can be disabled with 
	  the --no-terminal-focus-events parameter

2023-04-08  Markus Gans  <guru.mail@muenster.de>
	* Clears the FScrollView viewport area after viewport creation or 
	  resizing

2023-04-07  Markus Gans  <guru.mail@muenster.de>
	* Processing of FStyle in print() statements is now faster because only 
	  set data bits are considered

2023-04-06  Markus Gans  <guru.mail@muenster.de>
	* Individual columns can now be shown and hidden in FListView

2023-04-01  Markus Gans  <guru.mail@muenster.de>
	* FApplication now has the ability to register mouse handler functions

2023-03-24  Markus Gans  <guru.mail@muenster.de>
	* Compile fix for clang++ 15 with std=c++20

2023-03-16  Markus Gans  <guru.mail@muenster.de>
	* Size and position changes in FDialog are now made immediately before 
	  terminal output to speed up mouse-based changes

2023-03-13  Markus Gans  <guru.mail@muenster.de>
	* Speed up the drawing of shadows and boxes

2023-02-28  Markus Gans  <guru.mail@muenster.de>
	* Fix missing deletion of no_changes and printed attributes on transparency

2023-02-24  Markus Gans  <guru.mail@muenster.de>
	* Small speed-up of the print function
