@@ -1,3 +1,6 @@
+2023-10-14  Markus Gans  <guru.mail@muenster.de>
+	* Switch to a readers-writer lock for the timer list
+
 2023-10-07  Markus Gans  <guru.mail@muenster.de>
 	* Bugfix: Bottom transparent shadow changes were registered in wrong row
 
